@@ -43,6 +43,9 @@
 #import <WebCore/ApplicationCacheStorage.h>
 #import <WebCore/NetworkStorageSession.h>
 #import <WebCore/ResourceHandle.h>
+#import <WebCore/RunLoop.h>
+#import <runtime/InitializeThreading.h>
+#import <wtf/MainThread.h>
 #import <wtf/RetainPtr.h>
 
 using namespace WebCore;
@@ -304,6 +307,10 @@ public:
 // if we ever have more than one WebPreferences object, this would move to init
 + (void)initialize
 {
+    JSC::initializeThreading();
+    WTF::initializeMainThreadToProcessMainThread();
+    WebCore::RunLoop::initializeMainRunLoop();
+
     NSDictionary *dict = [NSDictionary dictionaryWithObjectsAndKeys:
         @"Times",                       WebKitStandardFontPreferenceKey,
         @"Courier",                     WebKitFixedFontPreferenceKey,
