@@ -1,3 +1,10 @@
+2012-12-27  Sam Weinig  <sam@webkit.org>
+
+        Attempt to fix the tests.
+
+        * WebView/WebPreferences.mm:
+        (+[WebPreferences initialize]):
+
 2012-12-23  Alexey Proskuryakov  <ap@apple.com>
 
         <rdar://problem/12808377> Network process should respect cookie accept policy
